--- a/src/app/components/usuario/lista/lista.component.html
+++ b/src/app/components/usuario/lista/lista.component.html
@@ -1,75 +1,95 @@
-<p>lista works!</p>
+<h1>lista Usuarios!</h1>
 
-<form [formGroup]="form">
 
-    <mat-form-field appearance="legacy">
-        <mat-label>email</mat-label>
-        <input matInput placeholder="email" formControlName="email">
-        <mat-hint>Email</mat-hint>
-    </mat-form-field>
+<mat-card>
+    <mat-card-title>Filtros</mat-card-title>
+    <mat-card-content>
+        <!--Filtros-->
+        <form [formGroup]="form">
 
-    <mat-form-field appearance="legacy">
-        <mat-label>usuario</mat-label>
-        <input matInput placeholder="usuario" formControlName="usuario">
-        <mat-hint>Usuario</mat-hint>
-    </mat-form-field>
+            <mat-form-field appearance="legacy">
+                <mat-label>email</mat-label>
+                <input matInput placeholder="email" formControlName="email">
+                <mat-hint>Email</mat-hint>
+            </mat-form-field>
 
-    <mat-form-field appearance="legacy">
-        <mat-label>nombres</mat-label>
-        <input matInput placeholder="nombres" formControlName="nombre">
-        <mat-hint>Nombres</mat-hint>
-    </mat-form-field>
+            <mat-form-field appearance="legacy">
+                <mat-label>usuario</mat-label>
+                <input matInput placeholder="usuario" formControlName="usuario">
+                <mat-hint>Usuario</mat-hint>
+            </mat-form-field>
 
-    <mat-form-field appearance="legacy">
-        <mat-label>apellidos</mat-label>
-        <input matInput placeholder="apellidos" formControlName="apellidos">
-        <mat-hint>Apellidos</mat-hint>
-    </mat-form-field>
+            <mat-form-field appearance="legacy">
+                <mat-label>nombres</mat-label>
+                <input matInput placeholder="nombres" formControlName="nombre">
+                <mat-hint>Nombres</mat-hint>
+            </mat-form-field>
 
-    <button mat-button color="primary" (click)="crearUsuario()">Crear</button>
-    <button mat-button color="primary" (click)="buscar()">Buscar</button>
+            <mat-form-field appearance="legacy">
+                <mat-label>apellidos</mat-label>
+                <input matInput placeholder="apellidos" formControlName="apellidos">
+                <mat-hint>Apellidos</mat-hint>
+            </mat-form-field>
 
-</form>
+        </form>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button color="primary" (click)="crearUsuario()">Crear</button>
+        <button mat-button color="primary" (click)="buscar()">Buscar</button>
+    </mat-card-actions>
+</mat-card>
+<br>
 
-    <table mat-table [dataSource]="listado" class="mat-elevation-z8">
 
-        <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
-        
-        <!-- Position Column -->
-        <ng-container matColumnDef="usuario">
-        <th mat-header-cell *matHeaderCellDef> usuario </th>
-        <td mat-cell *matCellDef="let element"> {{element.usuario}} </td>
-        </ng-container>
-        
-        <!-- Name Column -->
-        <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef> email </th>
-        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-        </ng-container>
-        
-        <!-- Weight Column -->
-        <ng-container matColumnDef="nombres">
-        <th mat-header-cell *matHeaderCellDef> nombres </th>
-        <td mat-cell *matCellDef="let element"> {{element.nombres}} </td>
-        </ng-container>
-        
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="apellidos">
-        <th mat-header-cell *matHeaderCellDef> apellidos </th>
-        <td mat-cell *matCellDef="let element"> {{element.apellidos}} </td>
-        </ng-container>
+<mat-card>
+    <mat-card-title>Tabla Datos</mat-card-title>
+    <mat-card-content>
+        <!-- tabla de datos-->
+        <table mat-table [dataSource]="listado" class="table">
 
-        <ng-container matColumnDef="acciones">
-            <th mat-header-cell *matHeaderCellDef> acciones </th>
-            <td mat-cell *matCellDef="let element"> 
-                <button mat-button color="primary" (click)="actualizarUsuario(element)">Editar</button>
+            <!--- Note that these columns can be defined in any order.
+    The actual rendered columns are set as a property on the row definition" -->
 
-            </td>
-        </ng-container>
-        
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <!-- Position Column -->
+            <ng-container matColumnDef="usuario">
+                <th mat-header-cell *matHeaderCellDef> usuario </th>
+                <td mat-cell *matCellDef="let element"> {{element.usuario}} </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef> email </th>
+                <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef> nombre </th>
+                <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="apellidos">
+                <th mat-header-cell *matHeaderCellDef> apellidos </th>
+                <td mat-cell *matCellDef="let element"> {{element.apellidos}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="acciones">
+                <th mat-header-cell *matHeaderCellDef> acciones </th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-button color="primary" (click)="actualizarUsuario(element)">Editar</button>
+                    <button mat-button color="primary" (click)="verUsuario(element)">Visualizar</button>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
 
+        <mat-paginator (page)="eventoPaginado($event)" [length]="length" [pageSize]="pageSize"
+            [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="pageSizeOptions" [pageIndex]="pageIndex"
+            aria-label="Select page">
+        </mat-paginator>
 
+    </mat-card-content>
+</mat-card>
