--- a/src/app/components/usuario/visualizar/visualizar.component.html
+++ b/src/app/components/usuario/visualizar/visualizar.component.html
@@ -1,1 +1,26 @@
-<p>visualizar works!</p>
+<h1>Visualizar</h1>
+
+
+    <mat-form-field appearance="legacy">
+        <mat-label>email</mat-label>
+        <input matInput placeholder="email" [value]="usuario.email" disabled>
+        <mat-hint>Email</mat-hint>
+    </mat-form-field>
+
+    <mat-form-field appearance="legacy">
+        <mat-label>usuario</mat-label>
+        <input matInput placeholder="usuario" [value]="usuario.usuario" disabled>
+        <mat-hint>Usuario</mat-hint>
+    </mat-form-field>
+
+    <mat-form-field appearance="legacy">
+        <mat-label>nombres</mat-label>
+        <input matInput placeholder="nombres" [value]="usuario.nombre" disabled>
+        <mat-hint>Nombres</mat-hint>
+    </mat-form-field>
+
+    <mat-form-field appearance="legacy">
+        <mat-label>apellidos</mat-label>
+        <input matInput placeholder="apellidos" [value]="usuario.apellidos" disabled>
+        <mat-hint>Apellidos</mat-hint>
+    </mat-form-field>
