--- a/src/app/components/usuario/visualizar/visualizar.component.html
+++ b/src/app/components/usuario/visualizar/visualizar.component.html
@@ -24,3 +24,9 @@
         <input matInput placeholder="apellidos" [value]="usuario.apellidos" disabled>
         <mat-hint>Apellidos</mat-hint>
     </mat-form-field>
+
+    <mat-form-field appearance="legacy">
+        <mat-label>estado</mat-label>
+        <input matInput placeholder="estado" [value]="usuario.estado" disabled>
+        <mat-hint>Estado</mat-hint>
+    </mat-form-field>
