--- a/src/app/components/usuario/lista/lista.component.html
+++ b/src/app/components/usuario/lista/lista.component.html
@@ -74,6 +74,12 @@
                 <td mat-cell *matCellDef="let element"> {{element.apellidos}} </td>
             </ng-container>
 
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="estado">
+                <th mat-header-cell *matHeaderCellDef> estado </th>
+                <td mat-cell *matCellDef="let element"> {{element.estado}} </td>
+            </ng-container>
+
             <ng-container matColumnDef="acciones">
                 <th mat-header-cell *matHeaderCellDef> acciones </th>
                 <td mat-cell *matCellDef="let element">
